--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,8 @@ djangorestframework==3.14.0
 geographiclib==2.0
 geopy==2.3.0
 psycopg2-binary==2.9.6
+python-dotenv==1.0.0
 pytz==2023.3
 sqlparse==0.4.4
+gunicorn
+gevent
